# headphones-plug-detector

./: CMakeLists.txt  LICENSE  README.md  headphones-plug-detector.service
cmake/: gdbus_codegen.cmake
include/: mpris.h
src/: main.c  mpris.c
